[package]
name = "craycray"
version = "0.1.0"
authors = ["Vzaa <Vzaa@users.noreply.github.com>"]

[dependencies]
sdl2 = "0.30.0"
rayon = "0.8.2"
clap = "2.23.3"
serde = "1.0.2"
serde_derive = "1.0.2"
serde_json = "1.0.1"

[profile.release]
lto = true

[dependencies.cgmath]
version = "0.15.0"
features = ["serde"]
